--- a/multistep_form/src/components/steps.css
+++ b/multistep_form/src/components/steps.css
@@ -3,7 +3,7 @@
     gap: 1.2rem;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
+    max-width: 500px;
     margin: 0 auto;
     position: relative;
     margin-bottom: 2rem;
