--- a/multistep_form/src/components/steps.css
+++ b/multistep_form/src/components/steps.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     position: relative;
     margin-bottom: 2rem;
-    overflow-x: auto; /* Add horizontal scrolling for small screens */
+    overflow-x: auto;
 }
 
 .steps::after {
@@ -39,4 +39,17 @@
 
 .active > svg {
     fill: #7076f4;
+    animation: popUp 0.3s ease-in-out forwards;
+}
+
+@keyframes popUp {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1.2);
+    }
 }
